--- a/CursoHTML-aula1/site.css
+++ b/CursoHTML-aula1/site.css
@@ -41,6 +41,7 @@ p {
 .rodape-pagina {
 	background-color: #000;
 	color: #F2FFFC;
+	clear: both;
 }
 
 main a {
@@ -56,7 +57,7 @@ main a {
     padding: 20px;
 }
 
-.texto {
+.container {
 	width: 720px;
 	margin: auto;
 	padding: 30px 0;
@@ -77,6 +78,7 @@ em {
 
 .subtitulo-texto {
 	font-size: 30px;
+	clear: both;
 }
 
 .icones-redes-sociais li {
@@ -119,4 +121,30 @@ nav a {
 
 .linkedin {
 	background-image: url(linkedin.png);
+}
+
+.fiat {
+	float: right;
+}
+
+.petrobras {
+	float: left;
+}
+
+main {
+	float: left;
+	width: 85%;
+}
+
+.minha-foto, .navegacao-site {
+	float: right;
+	width: 15%;
+	box-sizing: border-box;
+	border-left: 10px solid black;
+	border-bottom: 10px solid black;
+}
+
+cite {
+	font-style: italic;
+	float: right;
 }
